<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/imageViewID"
            android:layout_above="@+id/ButtonID2"
            android:layout_below="@+id/textID"/>

            <Button
                android:id="@+id/ButtonID2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:text="Save"
                android:layout_alignRight="@+id/imageViewID"/>

        <TextView
            android:id="@+id/textID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Title"
            android:background="@color/color1"
            android:layout_alignParentTop="true"/>

            <ScrollView
                android:id="@+id/scrollViewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageViewID"
                android:layout_below="@+id/textID"
                android:clickable="false"
                android:contextClickable="false">

                <RelativeLayout
                    android:id="@+id/relative_layoutID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/textID"
                    android:layout_weight="0.6"
                    android:layout_margin="3dp">

        <TextView
            android:id="@+id/text2ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="ahhahaha"
            android:textSize="10dp"/>


            <TextView
                android:id="@+id/text3ID"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/year"
                android:layout_alignTop="@+id/text4ID"
                android:textSize="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text4ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="XXXXXXXXXXXXXX"
                android:layout_below="@+id/text2ID"
                android:layout_toRightOf="@+id/text3ID"
                android:layout_marginTop="6dp"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/text5ID"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Director"
                android:layout_alignTop="@+id/text6ID"
                android:textSize="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text6ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="YYYYYYYYYYYYYYYYYYYY"
                android:layout_below="@+id/text4ID"
                android:layout_toRightOf="@+id/text5ID"
                android:layout_marginTop="3dp"
                android:textSize="10dp" />


            <TextView
                android:id="@+id/text8ID"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Actors"
                android:layout_alignTop="@+id/text9ID"
                android:textSize="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text9ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="WWWWWWWWWWWWWWW"
                android:layout_below="@+id/text6ID"
                android:layout_toRightOf="@+id/text8ID"
                android:layout_marginTop="3dp"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/text10ID"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Genre"
                android:layout_alignTop="@+id/text11ID"
                android:textSize="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text11ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" KKKKKKKKKKKKKKKKK"
                android:layout_below="@+id/text9ID"
                android:layout_toRightOf="@+id/text10ID"
                android:layout_marginTop="4dp"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/text12ID"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/RunTime"
                android:layout_alignTop="@+id/text13ID"
                android:textSize="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text13ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" LLLLLLLLLLLLLLLL"
                android:layout_below="@+id/text11ID"
                android:layout_toRightOf="@+id/text12ID"
                android:layout_marginTop="4dp"
                android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text14ID"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/Rated"
                        android:layout_alignTop="@+id/text15ID"
                        android:textSize="10dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text15ID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text=" AAAAAAAAAAAAAAAA"
                        android:layout_below="@+id/text13ID"
                        android:layout_toRightOf="@+id/text14ID"
                        android:layout_marginTop="4dp"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text16ID"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/Released"
                        android:layout_alignTop="@+id/text17ID"
                        android:textSize="10dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text17ID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="TTTTTTTTTTTTT"
                        android:layout_below="@+id/text15ID"
                        android:layout_toRightOf="@+id/text16ID"
                        android:layout_marginTop="4dp"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text18ID"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/Language"
                        android:layout_alignTop="@+id/text19ID"
                        android:textSize="10dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text19ID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="RRRRRRRRRRRRR"
                        android:layout_below="@+id/text17ID"
                        android:layout_toRightOf="@+id/text16ID"
                        android:layout_marginTop="4dp"
                        android:textSize="10dp" />


                    <ImageButton
                android:id="@+id/imageButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/text7ID"
                android:background="@drawable/ic_action_save"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/text7ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="37"
                android:layout_below="@+id/text19ID"
                android:layout_toRightOf="@+id/imageButtonID"
                android:textSize="18dp"
                android:textStyle="bold"
                android:padding="8dp"/>


                </RelativeLayout>

            </ScrollView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>